--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
-venv
+# Root .gitignore for FastAPI + React project
+
+# === Python ===
+__pycache__/
+*.py[cod]
+*.egg
+*.egg-info/
+dist/
+build/
+.eggs/
+*.log
+*.sqlite3
+*.db
+.env
+.env.*
+.venv/
+venv/
+ENV/
+*.pem
+
+# === FastAPI specific ===
+uploads/
+*.pyc
+*.pyo
+
+# === Node / React ===
+frontend/node_modules/
+frontend/dist/
+frontend/build/
+frontend/.vite/
+frontend/.cache/
+frontend/.env
+
+# === VS Code / IDEs ===
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# === OS files ===
+.DS_Store
+Thumbs.db
+
+# === Logs ===
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
